@@ -1,6 +1,7 @@
 // -*- Mode: c++; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; -*-
 /* This file is part of the KDE project
    Copyright (C) 1998, 1999 Reginald Stadlbauer <reggie@kde.org>
+   Copyright (C) 2002-2004 Thorsten Zachmann <zachmann@kde.org>
 
    This library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Library General Public
@@ -27,6 +28,8 @@
 #include <qpicture.h>
 #include <qvaluelist.h>
 #include <qpixmap.h>
+#include <qpointarray.h>
+#include <qvaluevector.h>
 
 #include <koRuler.h>
 #include <koQueryTrader.h>
@@ -569,7 +572,10 @@ private:
     bool drawContour;
     double startAngle;
     ModifyType modType;
-    unsigned int oldMx, oldMy;
+    /**
+     * Saves the last mouse position during mouse move events.
+     */
+    QPoint m_savedMousePos;
 
     KPObject *resizeObjNum, *editNum, *rotateNum;
 
@@ -577,6 +583,20 @@ private:
     KPresenterView *m_view;
     bool editMode, goingBack, drawMode;
     bool drawLineInDrawMode;
+    
+    /**
+     * Save the lines drawed in drawMode. 
+     * This is used for paint events.
+     * Used in drawing mode.
+     */
+    QValueVector<QPointArray> m_drawModeLines;
+
+    /**
+     * Index into the QPointArray for the next point of the line in draw mode.
+     * Used in drawing mode.
+     */
+    int m_drawModeLineIndex;
+    
     bool mouseSelectedObject;
     unsigned int currPresPage, currPresStep, subPresStep;
     unsigned int oldPresPage, oldPresStep, oldSubPresStep;
